--- a/tema.css
+++ b/tema.css
@@ -798,6 +798,17 @@
     margin: 0px 0px 0 20px!important;
     padding: 0 0 0 18px;
 }
+        /*# [Maatheuus] #*/
+#user-rollover.id-3440943 .level:after {
+    background-image: url(none);
+    background-repeat: no-repeat;
+    content: "[VIP]";
+    display: inline-block;
+    color: #e2da24!important;
+    font-weight: bold;
+    margin: 0px 0px 0 20px!important;
+    padding: 0 0 0 18px;
+}
     /*## [TAG-DIAMANTE] ##*/
 	
         /*# [Koryoshe] #*/
@@ -828,8 +839,8 @@
 }
 	/*## [TAG-EXTRA] ##*/
 	
-        /*# [Ninguem] #*/
-#chat [data-cid^='000000-'] .un:after, #user-lists .list .user.id-000000 .name:after, #user-rollover.id-000000 .username:after {
+        /*# [Maatheuus] #*/
+#chat [data-cid^='3440943-'] .un:after, #user-lists .list .user.id-3440943 .name:after, #user-rollover.id-3440943 .username:after {
     content: url(https://cdn.radiant.dj/rcs/icons/donatorDiamond.png);
     margin: 5px;
     color: #2b7b30;
@@ -1058,7 +1069,7 @@ i.icon-chat-cohost + span,
 }
 /*####[SUBS]####*/
 .icon-chat-subscriber, #user-rollover .meta.subscriber .status i {
-	background: url(https://image.prntscr.com/image/M5W9T0cFSnyz6TwsUblaMg.png);
+	background: url(null);
 	background-position: -1px 0 !important;
 }
 .icon-chat-subscriber + span {
@@ -1427,8 +1438,8 @@ i.icon-chat-cohost + span,
     padding-right: 4px;
     position: relative;
 }
-		/*# null #*/
-#chat [data-cid^='null-'] .un:before {
+		/*# Maatheuus #*/
+#chat [data-cid^='3440943-'] .un:before {
     content: '[VIP]';
     top: 0px;
     Left: 0px;
