--- a/config.css
+++ b/config.css
@@ -1,2 +1,2 @@
-@import url("https://rawgit.com/Koryoshe/NightPlug/master/tema.css");
-@import url("https://rawgit.com/Koryoshe/NightPlug/master/tags.css");
+@import url("https://raw.githubusercontent.com/Koryoshe/NightPlug/master/tema.css");
+@import url("https://raw.githubusercontent.com/Koryoshe/NightPlug/master/tags.css");
