--- a/tema.css
+++ b/tema.css
@@ -5,7 +5,7 @@
 	to {opacity: 1;}
 }
 /*#### [ICONE DA SALA] ####*/
-.icon-room {
+.nav-left__top .plugdj-logo {
     background: url(https://image.prntscr.com/image/HeyQPf2jQVyGNd_aXO1HXQ.png) no-repeat;
     width: 38px !important;
     height: 38px !important;
